--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -55,7 +55,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:text="http://server.local:8080" >
+                android:text="http://server.local:8080"
+                android:textSize="@dimen/dimension5pt" >
 
                 <requestFocus />
             </EditText>
@@ -64,8 +65,7 @@
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Set IP" />
+                android:text="Set server" />
         </LinearLayout>
     </LinearLayout>
 
@@ -74,22 +74,48 @@
         style="@layout/main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send angle to server"
-  />
+        android:layout_weight="0.00"
+        android:text="Send angle to server" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:text=""
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.04"
+        android:layout_weight="0.01"
         android:text="90°"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColorHint="@android:color/black"
         android:textSize="@dimen/angleDimension60pt" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.00"
+        android:orientation="vertical" >
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
