--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -61,21 +61,16 @@
                 <requestFocus />
             </EditText>
 
-            <Button
-                android:id="@+id/button1"
+            <Switch
+                android:id="@+id/switch1"
+                style="@layout/main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Set server" />
+                android:layout_weight="0.00"
+                android:text="" />
+
         </LinearLayout>
     </LinearLayout>
-
-    <Switch
-        android:id="@+id/switch1"
-        style="@layout/main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.00"
-        android:text="Send angle to server" />
 
     <Space
         android:layout_width="match_parent"
@@ -126,7 +121,7 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set this angle to 0° (current --)" />
+        android:text="Set this angle to 90° (current --)" />
 
     <TextView
         android:id="@+id/textView3"
